--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 							<h2>Переезд 1-комнатной<br/>квартиры</h2>
 							<p class="old"><s>7 399<small>руб</small></s>&nbsp;</p>
 							<p class="new">&nbsp;5 399<small>руб</small></p>
-							<p><a href="#contact" class="btn btn-danger" role="button" data-toggle="modal" data-target="#myModal">Заказать</a></p>
+							<p><a href="" class="btn btn-danger" role="button" data-toggle="modal" data-target="#myModal">Заказать</a></p>
 						</div>
 					</div>
 				</div>
@@ -132,7 +132,7 @@
 							<h2>Переезд 2-комнатной<br/>квартиры</h2>
 							<p class="old"><s>11 399<small>руб</small></s>&nbsp;</p>
 							<p class="new">&nbsp;7 399<small>руб</small></p>
-							<p><a href="#contact" class="btn btn-danger" role="button" data-toggle="modal" data-target="#myModal">Заказать</a></p>
+							<p><a href="" class="btn btn-danger" role="button" data-toggle="modal" data-target="#myModal">Заказать</a></p>
 						</div>
 					</div>
 				</div>
@@ -143,7 +143,7 @@
 							<h2>Переезд 3-комнатной<br/>квартиры</h2>
 							<p class="old"><s>17 399<small>руб</small></s>&nbsp;</p>
 							<p class="new">&nbsp;13 399<small>руб</small></p>
-							<p><a href="#contact" class="btn btn-danger" role="button" data-toggle="modal" data-target="#myModal">Заказать</a></p>
+							<p><a href="" class="btn btn-danger" role="button" data-toggle="modal" data-target="#myModal">Заказать</a></p>
 						</div>
 					</div>
 				</div>
@@ -153,7 +153,7 @@
 						<div class="caption">
 							<h2>Переезд<br class="visible-sm"/> в другой город </h2>
 							<p class="new">Цена договорная</p>
-							<p><a href="#contact" class="btn btn-danger" role="button" data-toggle="modal" data-target="#myModal">Заказать</a></p>
+							<p><a href="" class="btn btn-danger" role="button" data-toggle="modal" data-target="#myModal">Заказать</a></p>
 						</div>
 					</div>
 				</div>
@@ -164,7 +164,7 @@
 							<h2>Аренда грузчиков</h2>
 							<p class="old"><s>399<small>руб</small></s>&nbsp;</p>
 							<p class="new">&nbsp;299<small>руб</small></p>
-							<p><a href="#contact" class="btn btn-danger" role="button" data-toggle="modal" data-target="#myModal">Заказать</a></p>
+							<p><a href="" class="btn btn-danger" role="button" data-toggle="modal" data-target="#myModal">Заказать</a></p>
 							<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 							  <div class="modal-dialog">
 								<div class="modal-content">
@@ -200,7 +200,7 @@
 							<h2>Аренда транспорта</h2>
 							<p class="old"><s>3 399<small>руб</small></s>&nbsp;</p>
 							<p class="new">&nbsp;2 399<small>руб</small></p>
-							<p><a href="#contact" class="btn btn-danger" role="button" data-toggle="modal" data-target="#myModal">Заказать</a></p>
+							<p><a href="" class="btn btn-danger" role="button" data-toggle="modal" data-target="#myModal">Заказать</a></p>
 						</div>
 					</div>
 				</div>
@@ -221,7 +221,7 @@
        </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script type="text/javascript">
 		  WebFontConfig = {
